bee-common/bee-packable-derive/tests/packable/fail/union.stderr
error: Unions cannot derive `Packable`.
  --> $DIR/union.rs:12:11
   |
12 | pub union MaybeInt {
   |           ^^^^^^^^
